# college_admin_website

./: Cargo.toml  README.md
src/: admin_login.rs  data_types.rs  database.rs  lib.rs  main.rs  student.rs  teacher.rs
