[package]
name = "college_admin_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path ="src/lib.rs"
name ="mylib"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
mongodb = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
dotenv = "0.15.0"
serde_json = "*"